Added "Remove Outliers" and "Feature Engineering"

--- a/project.ipynb
+++ b/project.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "4  The RS-28 Sarmat missile, dubbed Satan 2, will...      1  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
        "4  Home / Badge Abuse / Cop Arrested for Using Po...      1  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
        "4  Hillary Clinton strategist Bob Beckel called f...      1  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -500,18 +500,18 @@
    ],
    "source": [
     "# Combining all 3 dataframes into 1\n",
-    "data = pd.concat([data_raw1, data_raw2, data_raw3], axis=0)\n",
+    "data_raw = pd.concat([data_raw1, data_raw2, data_raw3], axis=0)\n",
     "\n",
     "# Reset index and drop old index column\n",
-    "data = data.reset_index(drop=True)\n",
+    "data_raw = data_raw.reset_index(drop=True)\n",
     "\n",
-    "data.info()\n",
-    "print(\"Dataframe Shape: \", data.shape)"
+    "data_raw.info()\n",
+    "print(\"Dataframe Shape: \", data_raw.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -654,14 +654,368 @@
        "[72134 rows x 4 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "data_raw"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Selection\n",
+    "Here we select the relevant features for fake news classification\n",
+    "- `title`, `text`, `label`\n",
+    "- Create a new DataFrame (`data`) by selecting the specifc columns mentioned above from the original DataFrame `data_raw`.\n",
+    "\n",
+    "### Remove Duplicate Rows\n",
+    "- Drop duplicate rows from the dataframe (`data`)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "                                               title  \\\n",
+      "0  LAW ENFORCEMENT ON HIGH ALERT Following Threat...   \n",
+      "1                                                NaN   \n",
+      "2  UNBELIEVABLE! OBAMA’S ATTORNEY GENERAL SAYS MO...   \n",
+      "3  Bobby Jindal, raised Hindu, uses story of Chri...   \n",
+      "4  SATAN 2: Russia unvelis an image of its terrif...   \n",
+      "\n",
+      "                                                text  label  \n",
+      "0  No comment is expected from Barack Obama Membe...      1  \n",
+      "1     Did they post their votes for Hillary already?      1  \n",
+      "2   Now, most of the demonstrators gathered last ...      1  \n",
+      "3  A dozen politically active pastors came here f...      0  \n",
+      "4  The RS-28 Sarmat missile, dubbed Satan 2, will...      1  \n",
+      "The old shape is:  (72134, 3)\n",
+      "The new shape is:  (63678, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = data_raw[['title', 'text', 'label',]]\n",
+    "print(type(data))\n",
+    "print(data.head())\n",
+    "\n",
+    "# Shape before dropping duplicates\n",
+    "print(\"The old shape is: \", data.shape)\n",
+    "\n",
+    "data = data.drop_duplicates()\n",
+    "\n",
+    "# Display the new dataframe shape\n",
+    "print(\"The new shape is: \", data.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Remove Outliers\n",
+    "\n",
+    "### `text`\n",
+    "\n",
+    "The `text` column of `data`, which is of string type, may contain values with unusually long lengths, indicating the presence of outliers. We will identify the outliers using [Z-score method].\n",
+    "\n",
+    "1. Create a new column `text_length` in the DataFrame `data` by calculating the length of each review. (Set the value as 0 if the correponding `text` column has NaN values.)\n",
+    "2. Check the statistics of `text_length` using `describe()` method.\n",
+    "3. Calculate the mean and standard deviation of the `text_length` column.\n",
+    "4. Set the Z-score threshold for identifying outliers to 3.\n",
+    "5. Identify outliers of the `text_length` column and set the corresponding `text` to np.nan.\n",
+    "6. Drop the `text_length` column from the DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                               title  \\\n",
+      "0  LAW ENFORCEMENT ON HIGH ALERT Following Threat...   \n",
+      "1                                                NaN   \n",
+      "2  UNBELIEVABLE! OBAMA’S ATTORNEY GENERAL SAYS MO...   \n",
+      "\n",
+      "                                                text  label  text_length  \n",
+      "0  No comment is expected from Barack Obama Membe...      1         5049  \n",
+      "1     Did they post their votes for Hillary already?      1           46  \n",
+      "2   Now, most of the demonstrators gathered last ...      1          216  \n",
+      "count     63678.000000\n",
+      "mean       3276.752866\n",
+      "std        3636.269585\n",
+      "min           0.000000\n",
+      "25%        1428.000000\n",
+      "50%        2456.000000\n",
+      "75%        4095.000000\n",
+      "max      142961.000000\n",
+      "Name: text_length, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "data['text_length'] = data['text'].apply(lambda x: len(x) if pd.notna(x) else 0)\n",
+    "print(data.head(3))\n",
+    "\n",
+    "TL = data[\"text_length\"]\n",
+    "stats_TL = TL.describe()\n",
+    "print(stats_TL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_TL = TL.mean()\n",
+    "# print(mean_TL)\n",
+    "\n",
+    "sd_TL = TL.std()\n",
+    "# print(sd_TL)\n",
+    "\n",
+    "threshold = 3\n",
+    "\n",
+    "z_score = zscore(TL)\n",
+    "# print(z_score)\n",
+    "\n",
+    "# Remove 'text' of lengths that are greater than 3 standard deviations above the mean\n",
+    "data.loc[abs(z_score) > threshold, 'text'] = np.nan\n",
+    "# print(data.head(3))\n",
+    "\n",
+    "data = data.drop(\"text_length\", axis=1)\n",
+    "# print(data.head(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `title`\n",
+    "\n",
+    "Similarly, the `title` column of `data` (of type `str`) may also contain values with unusually long lengths, indicating the presence of outliers.\n",
+    "\n",
+    "1. Create a new column `title_length` in the DataFrame `data` by calculating the length of each price value. (Set the value as 0 if the correponding `title` column has NaN values.)\n",
+    "2. Check the statistics of `title_length` using `describe()` method and display its unique values.\n",
+    "3. Identify the outlier values by inspecting the content in `title` corresponding to the abnormal value in `title_length` and set the corresponding value of `title` to np.nan.\n",
+    "4. Drop the `title_length` column from the DataFrame."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                               title  \\\n",
+      "0  LAW ENFORCEMENT ON HIGH ALERT Following Threat...   \n",
+      "1                                                NaN   \n",
+      "2  UNBELIEVABLE! OBAMA’S ATTORNEY GENERAL SAYS MO...   \n",
+      "\n",
+      "                                                text  label  title_length  \n",
+      "0  No comment is expected from Barack Obama Membe...      1           130  \n",
+      "1     Did they post their votes for Hillary already?      1             0  \n",
+      "2   Now, most of the demonstrators gathered last ...      1           137  \n",
+      "count    63678.000000\n",
+      "mean        74.568344\n",
+      "std         23.619850\n",
+      "min          0.000000\n",
+      "25%         61.000000\n",
+      "50%         72.000000\n",
+      "75%         86.000000\n",
+      "max        456.000000\n",
+      "Name: title_length, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "data['title_length'] = data['title'].apply(lambda x: len(x) if pd.notna(x) else 0)\n",
+    "print(data.head(3))\n",
+    "\n",
+    "TL = data[\"title_length\"]\n",
+    "stats_TL = TL.describe()\n",
+    "print(stats_TL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_TL = TL.mean()\n",
+    "# print(mean_TL)\n",
+    "\n",
+    "sd_TL = TL.std()\n",
+    "# print(sd_TL)\n",
+    "\n",
+    "threshold = 3\n",
+    "\n",
+    "z_score = zscore(TL)\n",
+    "# print(z_score)\n",
+    "\n",
+    "# Remove 'title' of lengths that are greater than 3 standard deviations above the mean\n",
+    "data.loc[abs(z_score) > threshold, 'title'] = np.nan\n",
+    "# print(data.head(3))\n",
+    "\n",
+    "data = data.drop(\"title_length\", axis=1)\n",
+    "# print(data.head(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title    1344\n",
+       "text      877\n",
+       "label       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering\n",
+    "\n",
+    "### Create new column `full_review`\n",
+    "Since there are some rows with empty `text` and `title`, we will concatenate both columns (`text` and `title`) to form a new column `full_review`.\n",
+    "1. Replace `NaN` values in `text` and `title` with an empty string\n",
+    "\n",
+    "2. Combine `text` and `title` into `full_review`\n",
+    "\n",
+    "3. Strip any leading/trailing whitespaces in `full_review`\n",
+    "\n",
+    "4. Drop `text` and `title` columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>full_review</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>No comment is expected from Barack Obama Membe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Did they post their votes for Hillary already?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Now, most of the demonstrators gathered last n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>A dozen politically active pastors came here f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>The RS-28 Sarmat missile, dubbed Satan 2, will...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   label                                        full_review\n",
+       "0      1  No comment is expected from Barack Obama Membe...\n",
+       "1      1     Did they post their votes for Hillary already?\n",
+       "2      1  Now, most of the demonstrators gathered last n...\n",
+       "3      0  A dozen politically active pastors came here f...\n",
+       "4      1  The RS-28 Sarmat missile, dubbed Satan 2, will..."
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1) Fill NaN values in 'text' and 'title' with an empty string\n",
+    "data['title'] = data['title'].fillna('')\n",
+    "data['text'] = data['text'].fillna('')\n",
+    "\n",
+    "# 2) Combine 'text' and 'title' into 'full_review'\n",
+    "data['full_review'] = data['text'] + \" \" + data['title']\n",
+    "\n",
+    "# 3) Strip any leading/trailing whitespace\n",
+    "data['full_review'] = data['full_review'].str.strip()\n",
+    "\n",
+    "# 4) Drop `text` and `title` columns\n",
+    "data = data.drop(columns = ['text', 'title'])\n",
+    "\n",
+    "# Check if the 'full_review' column was added and if 'text' and 'title' columns has been dropped\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
