--- a/project.ipynb
+++ b/project.ipynb
@@ -2250,7 +2250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `label` and length of `processed_full_review`\n",
+    "#### 1) `label` and length of `processed_full_review`\n",
     "\n",
     "**Purpose**:"
    ]
@@ -2287,7 +2287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Distribution of length of `processed_full_review`\n",
+    "#### 2) Distribution of length of `processed_full_review`\n",
     "\n",
     "**Purpose**:"
    ]
@@ -2303,7 +2303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Pronoun Ratio\n",
+    "#### 3) Pronoun Ratio\n",
     "\n",
     "**Importance**: Fake news often uses a **high number** of pronouns to create a conversational tone, suggest a false sense of inclusion, or obscure the lack of factual information. Personal pronouns like \"we\", \"you\", \"they\" can indicate attempts to build a connection or manipulate emotions\n",
     "\n",
@@ -2321,7 +2321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Modal Verb Ratio\n",
+    "#### 4) Modal Verb Ratio\n",
     "\n",
     "**Importance**: Modal verbs (e.g., `can`, `could`, `may`, `might`, `should`, `will`) are used to express possibilities, permissions, obligations, or suggestions. Fake news articles may use modal verbs **more frequently** to speculate, create doubt, or suggest uncertainty without concrete evidence\n",
     "\n",
@@ -2339,7 +2339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Adjective Ratio\n",
+    "#### 5) Adjective Ratio\n",
     "\n",
     "**Importance**: Fake news tends to use more adjectives, especially extreme ones, to exaggerate or sensationalise the content. High usage of adjectives may indicate subjective or emotionally charged language, which is often used to attract attention or manipulate readers.\n",
     "\n",
@@ -2357,7 +2357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Word Cloud\n",
+    "#### 6) Word Cloud\n",
     "\n",
     "**Purpose**:"
    ]
