Updated project.ipynb markdown cells

--- a/project.ipynb
+++ b/project.ipynb
@@ -14,7 +14,11 @@
    "source": [
     "**Motivation**\n",
     "\n",
-    "We want to apply our trained model to scraped news data from popular US media outlets and access the credibility of these media outlets. This way we can help the public to make more informed decisions about what media outlets they can trust. \n"
+    "As media continues to grow in volume, it is becoming increasingly difficult to differentiate real and fake news effectively. It is thus imperative for us to find better ways to identify fake news, and for us, this means with the help of data mining and machine learning.\n",
+    "\n",
+    "In the first part of our project, we will focus on experimenting with different data processing techniques and predictive models, optimising our final pipeline and model to accurately identify fake news.\n",
+    "\n",
+    "For the second part, we want to apply our trained model to scraped news data from popular US media outlets and access the credibility of these media outlets. This way we can help the public to make more informed decisions about what media outlets they can trust. \n"
    ]
   },
   {
