Edited markdown cells

--- a/project.ipynb
+++ b/project.ipynb
@@ -33,7 +33,7 @@
     "- **Index:**: Index.\n",
     "- **title:** Title of news article.\n",
     "- **text:** Text content of news article.\n",
-    "- **label:** Whether news article is real (1) or fake (0).\n",
+    "- **label:** Whether news article is real (0) or fake (1).\n",
     "\n",
     "The Fake News Dataset is split into 3 `csv` files (`part1.csv`, `part2.csv`, `part3.csv`) so that size does not exceed size limit to push changes to GitHub."
    ]
@@ -1147,12 +1147,12 @@
     "# Feature Engineering\n",
     "\n",
     "### Create new column `full_review`\n",
-    "Since there are some rows with empty `text` and `title`, we will concatenate both columns (`text` and `title`) to form a new column `full_review`.\n",
+    "Since there are some rows with empty `text` and `title`, we will concatenate both columns (`text` and `title`) to form a new column `full_content`.\n",
     "1. Replace `NaN` values in `text` and `title` with an empty string.\n",
     "\n",
-    "2. Combine `text` and `title` into `full_review`.\n",
+    "2. Combine `text` and `title` into `full_content`.\n",
     "\n",
-    "3. Strip any leading/trailing whitespaces in `full_review`.\n",
+    "3. Strip any leading/trailing whitespaces in `full_content`.\n",
     "\n",
     "4. Drop `text` and `title` columns."
    ]
@@ -1182,11 +1182,11 @@
     "data['title'] = data['title'].fillna('')\n",
     "data['text'] = data['text'].fillna('')\n",
     "\n",
-    "# 2) Combine 'text' and 'title' into 'full_review'\n",
-    "data['full_review'] = data['text'] + \" \" + data['title']\n",
+    "# 2) Combine 'text' and 'title' into 'content'\n",
+    "data['full_content'] = data['text'] + \" \" + data['title']\n",
     "\n",
     "# 3) Strip any leading/trailing whitespace\n",
-    "data['full_review'] = data['full_review'].str.strip()\n",
+    "data['full_content'] = data['full_content'].str.strip()\n",
     "\n",
     "# 4) Drop `text` and `title` columns\n",
     "data = data.drop(columns = ['text', 'title'])\n",
@@ -1233,7 +1233,7 @@
    ],
    "source": [
     "# 1) Drop rows where `full_review` are empty strings and reset the index\n",
-    "data = data[data['full_review'] != \"\"].reset_index(drop=True)\n",
+    "data = data[data['full_content'] != \"\"].reset_index(drop=True)\n",
     "print(\"The new shape is:\",data.shape)\n",
     "\n",
     "# 2) Check if there are no more null values in `data`\n",
@@ -1487,7 +1487,7 @@
     "    return final_language\n",
     "\n",
     "# 8) Apply the cached function to each text in the DataFrame with a progress bar\n",
-    "data['language'] = [get_cached_language(text) for text in tqdm(data['full_review'], desc=\"Language Detection\")]\n",
+    "data['language'] = [get_cached_language(text) for text in tqdm(data['full_content'], desc=\"Language Detection\")]\n",
     "\n",
     "# 9) Display the DataFrame with detected languages\n",
     "data"
@@ -2609,11 +2609,11 @@
    ],
    "source": [
     "# Enable tqdm for pandas (progress bar)\n",
-    "tqdm.pandas(desc=\"Processing Reviews\")\n",
+    "tqdm.pandas(desc=\"Processing News Articles\")\n",
     "\n",
     "# Apply process_full_review function with tqdm progress bar and expand the results into separate columns.\n",
-    "processed_columns = ['processed_full_review', 'pronoun_ratio', 'modal_verb_ratio', 'negations_ratio', 'verbs_ratio', 'nouns_ratio', 'adverbs_ratio']\n",
-    "data[processed_columns] = data['full_review'].progress_apply(lambda x: pd.Series(process_full_review(x)))\n",
+    "processed_columns = ['processed_full_content', 'pronoun_ratio', 'modal_verb_ratio', 'negations_ratio', 'verbs_ratio', 'nouns_ratio', 'adverbs_ratio']\n",
+    "data[processed_columns] = data['full_content'].progress_apply(lambda x: pd.Series(process_full_review(x)))\n",
     "\n",
     "data"
    ]
@@ -2629,11 +2629,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1) `label` and length of `full_review`\n",
+    "#### 1) `label` and length of `full_content`\n",
     "\n",
-    "**Purpose**: Check if the length of `full_review` varies with the `label`\n",
+    "**Purpose**: Check if the length of `full_content` varies with the `label`\n",
     "\n",
-    "1. We add a new column `full_review_length` to `data` that represents the length of each news article in terms of the number of words."
+    "1. Create a copy of the original dataframe (`data`) called `datacopy`.\n",
+    "2. We add a new column `full_content_length` to `data` that represents the length of each news article in terms of the number of words.\n",
+    "3. We create a box plot using the seaborn library to visualise the distribution of content lengths (`full_content_length`) for fake and real news."
    ]
   },
   {
@@ -2655,15 +2657,15 @@
    "source": [
     "# Length of full review\n",
     "datacopy = data.copy()\n",
-    "datacopy[\"full_review_length\"] = datacopy[\"full_review\"].apply(lambda x: len(x) - x.count(\" \"))\n",
+    "datacopy[\"full_content_length\"] = datacopy[\"full_content\"].apply(lambda x: len(x) - x.count(\" \"))\n",
     "\n",
     "### Plot\n",
     "plt.figure(figsize=(11, 6))\n",
-    "sns.boxplot(x=\"label\", y=\"full_review_length\", data=datacopy, showmeans=True, showfliers=False)\n",
+    "sns.boxplot(x=\"label\", y=\"full_content_length\", data=datacopy, showmeans=True, showfliers=False)\n",
     "\n",
-    "plt.title(\"Visualisation of the Distribution of Review Lengths for Different Labels\")\n",
+    "plt.title(\"Visualisation of the Distribution of Content Lengths for Different Labels\")\n",
     "plt.xlabel(\"Label\")\n",
-    "plt.ylabel(\"Review Length\")\n",
+    "plt.ylabel(\"Content Length\")\n",
     "\n",
     "plt.show()"
    ]
@@ -2687,8 +2689,8 @@
    "source": [
     "bins = np.linspace(0, 200, 40)\n",
     "\n",
-    "plt.hist(datacopy[datacopy[\"label\"]== 1][\"full_review_length\"], bins, alpha=0.5, label=\"Fake\", color=\"#FF5733\")\n",
-    "plt.hist(datacopy[datacopy[\"label\"]== 0][\"full_review_length\"], bins, alpha=0.5, label=\"Real\", color=\"#33FFB8\")\n",
+    "plt.hist(datacopy[datacopy[\"label\"]== 1][\"full_review_length\"], bins, alpha=0.5, label=\"Real\", color=\"#FF5733\")\n",
+    "plt.hist(datacopy[datacopy[\"label\"]== 0][\"full_review_length\"], bins, alpha=0.5, label=\"Fake\", color=\"#33FFB8\")\n",
     "plt.legend(loc=\"upper left\")\n",
     "plt.xlabel(\"Length of news article (in bins)\")\n",
     "plt.ylabel(\"Frequency\")\n",
@@ -2701,9 +2703,7 @@
    "source": [
     "#### 2) Pronoun Ratio\n",
     "\n",
-    "**Importance**: Fake news often uses a **high number** of pronouns to create a conversational tone, suggest a false sense of inclusion, or obscure the lack of factual information. Personal pronouns like \"we\", \"you\", \"they\" can indicate attempts to build a connection or manipulate emotions\n",
-    "\n",
-    "**Purpose**:"
+    "**Importance**: Fake news often uses a **high number** of pronouns to create a conversational tone, suggest a false sense of inclusion, or obscure the lack of factual information. Personal pronouns like \"we\", \"you\", \"they\" can indicate attempts to build a connection or manipulate emotions."
    ]
   },
   {
@@ -2730,7 +2730,7 @@
     "# Combine the data into a single DataFrame for easier plotting\n",
     "plot_data = pd.DataFrame({\n",
     "    'pronoun_ratio': np.concatenate([pronoun_ratio_0.values, pronoun_ratio_1.values]),\n",
-    "    'label': ['Fake'] * len(pronoun_ratio_0) + ['Real'] * len(pronoun_ratio_1)\n",
+    "    'label': ['Real'] * len(pronoun_ratio_0) + ['Fake'] * len(pronoun_ratio_1)\n",
     "})\n",
     "\n",
     "# Create the box plot using Seaborn\n",
@@ -2748,9 +2748,7 @@
    "source": [
     "#### 3) Modal Verb Ratio\n",
     "\n",
-    "**Importance**: Modal verbs (e.g., `can`, `could`, `may`, `might`, `should`, `will`) are used to express possibilities, permissions, obligations, or suggestions. Fake news articles may use modal verbs **more frequently** to speculate, create doubt, or suggest uncertainty without concrete evidence\n",
-    "\n",
-    "**Purpose**:"
+    "**Importance**: Modal verbs (e.g., `can`, `could`, `may`, `might`, `should`, `will`) are used to express possibilities, permissions, obligations, or suggestions. Fake news articles may use modal verbs **more frequently** to speculate, create doubt, or suggest uncertainty without concrete evidence"
    ]
   },
   {
@@ -2777,7 +2775,7 @@
     "# Combine the data into a single DataFrame for easier plotting\n",
     "plot_data = pd.DataFrame({\n",
     "    'modal_verb_ratio': np.concatenate([modal_verb_ratio_0.values, modal_verb_ratio_1.values]),\n",
-    "    'label': ['Fake'] * len(modal_verb_ratio_0) + ['Real'] * len(modal_verb_ratio_1)\n",
+    "    'label': ['Real'] * len(modal_verb_ratio_0) + ['Fake'] * len(modal_verb_ratio_1)\n",
     "})\n",
     "\n",
     "# Create the box plot using Seaborn\n",
@@ -2795,9 +2793,7 @@
    "source": [
     "#### 4) Negation Ratio\n",
     "\n",
-    "**Importance**: \n",
-    "\n",
-    "**Purpose**:"
+    "**Importance**: Negation words (e.g., `not`, `no`, `never`) can drastically change the meaning and sentiment of a statement. Fake news may use negation to reverse the tone or create skepticism about factual information, and might employ more aggresive negation to to instill doubt."
    ]
   },
   {
@@ -2824,7 +2820,7 @@
     "# Combine the data into a single DataFrame for easier plotting\n",
     "plot_data = pd.DataFrame({\n",
     "    'negations_ratio': np.concatenate([negations_ratio_0.values, negations_ratio_1.values]),\n",
-    "    'label': ['Fake'] * len(negations_ratio_0) + ['Real'] * len(negations_ratio_1)\n",
+    "    'label': ['Real'] * len(negations_ratio_0) + ['Fake'] * len(negations_ratio_1)\n",
     "})\n",
     "\n",
     "# Create the box plot using Seaborn\n",
@@ -2842,9 +2838,7 @@
    "source": [
     "#### 5) Verbs Ratio\n",
     "\n",
-    "**Importance**: \n",
-    "\n",
-    "**Purpose**:"
+    "**Importance**: "
    ]
   },
   {
@@ -2871,7 +2865,7 @@
     "# Combine the data into a single DataFrame for easier plotting\n",
     "plot_data = pd.DataFrame({\n",
     "    'verbs_ratio': np.concatenate([verbs_ratio_0.values, verbs_ratio_1.values]),\n",
-    "    'label': ['Fake'] * len(verbs_ratio_0) + ['Real'] * len(verbs_ratio_1)\n",
+    "    'label': ['Real'] * len(verbs_ratio_0) + ['Fake'] * len(verbs_ratio_1)\n",
     "})\n",
     "\n",
     "# Create the box plot using Seaborn\n",
@@ -2889,9 +2883,7 @@
    "source": [
     "#### 6) Nouns Ratio\n",
     "\n",
-    "**Importance**: \n",
-    "\n",
-    "**Purpose**:"
+    "**Importance**: "
    ]
   },
   {
@@ -2918,7 +2910,7 @@
     "# Combine the data into a single DataFrame for easier plotting\n",
     "plot_data = pd.DataFrame({\n",
     "    'nouns_ratio': np.concatenate([nouns_ratio_0.values, nouns_ratio_1.values]),\n",
-    "    'label': ['Fake'] * len(nouns_ratio_0) + ['Real'] * len(nouns_ratio_1)\n",
+    "    'label': ['Real'] * len(nouns_ratio_0) + ['Fake'] * len(nouns_ratio_1)\n",
     "})\n",
     "\n",
     "# Create the box plot using Seaborn\n",
@@ -2936,9 +2928,7 @@
    "source": [
     "#### 7) Adverbs Ratio\n",
     "\n",
-    "**Importance**: \n",
-    "\n",
-    "**Purpose**:"
+    "**Importance**: "
    ]
   },
   {
@@ -2965,7 +2955,7 @@
     "# Combine the data into a single DataFrame for easier plotting\n",
     "plot_data = pd.DataFrame({\n",
     "    'adverbs_ratio': np.concatenate([adverbs_ratio_0.values, adverbs_ratio_1.values]),\n",
-    "    'label': ['Fake'] * len(adverbs_ratio_0) + ['Real'] * len(adverbs_ratio_1)\n",
+    "    'label': ['Real'] * len(adverbs_ratio_0) + ['Fake'] * len(adverbs_ratio_1)\n",
     "})\n",
     "\n",
     "# Create the box plot using Seaborn\n",
@@ -3047,8 +3037,8 @@
    ],
    "source": [
     "### Create fake_news and real_news\n",
-    "fake_news = \" \".join(data[data[\"label\"] == 0][\"processed_full_review\"])\n",
-    "real_news = \" \".join(data[data[\"label\"] == 1][\"processed_full_review\"])\n",
+    "real_news = \" \".join(data[data[\"label\"] == 0][\"processed_full_review\"])\n",
+    "fake_news = \" \".join(data[data[\"label\"] == 1][\"processed_full_review\"])\n",
     "\n",
     "### Generate two Word Clouds\n",
     "generate_word_cloud_adjectives(fake_news, \"Word Cloud for Fake News Articles\")\n",
