--- a/processing_experiments/stemming.ipynb
+++ b/processing_experiments/stemming.ipynb
@@ -2651,7 +2651,7 @@
     "\n",
     "nb_predictions = nb_model.predict(X_test)\n",
     "\n",
-    "print(accuracy(y_test,nb_predictions)\n",
+    "print(accuracy_score(y_test,nb_predictions)\n",
     "print(classification_report(y_test, nb_predictions))"
    ]
   },
