--- a/processing_experiments/truncation_1.ipynb
+++ b/processing_experiments/truncation_1.ipynb
@@ -2418,7 +2418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2519,14 +2519,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing News Articles: 100%|██████████| 62932/62932 [07:53<00:00, 132.84it/s]\n"
+      "Processing News Articles: 100%|██████████| 62932/62932 [07:54<00:00, 132.68it/s]\n"
      ]
     },
     {
@@ -2657,7 +2657,7 @@
        "[62932 rows x 3 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2675,7 +2675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2739,9 +2739,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Accuracy: 0.9483594184476046\n",
+      "Random Forest Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.96      0.95      0.95      7093\n",
+      "           1       0.94      0.95      0.94      5494\n",
+      "\n",
+      "    accuracy                           0.95     12587\n",
+      "   macro avg       0.95      0.95      0.95     12587\n",
+      "weighted avg       0.95      0.95      0.95     12587\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
@@ -2755,9 +2773,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.943672042583618\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      0.95      0.95      7093\n",
+      "           1       0.94      0.93      0.94      5494\n",
+      "\n",
+      "    accuracy                           0.94     12587\n",
+      "   macro avg       0.94      0.94      0.94     12587\n",
+      "weighted avg       0.94      0.94      0.94     12587\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
